--- a/charts/operator/Chart.yaml
+++ b/charts/operator/Chart.yaml
@@ -1,16 +1,9 @@
 ---
 apiVersion: v2
 name: operator
-description: Deploy minio-operator-ext, an operator that allows for declarative management of MinIO resources
+home: "https://github.com/benfiola/minio-operator-ext"
+description: |
+  Deploy minio-operator-ext, an operator that allows for declarative management of MinIO resources
 type: application
-
-# This is the chart version. This version number should be incremented each time you make changes
-# to the chart and its templates, including the app version.
-# Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.1.0
-
-# This is the version number of the application being deployed. This version number should be
-# incremented each time you make changes to the application. Versions are not expected to
-# follow Semantic Versioning. They should reflect the version the application is using.
-# It is recommended to use it with quotes.
-appVersion: "2.1.0"
+version: "0.0.0"
+appVersion: "0.0.0"
