--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -123,7 +123,7 @@ jobs:
       - name: download chart
         uses: actions/download-artifact@v4
         with:
-          pattern: helm-${{matrix.chart}}
+          pattern: helm-charts-${{matrix.chart}}
           path: .
           merge-multiple: true
       - name: generate chart docs
