fix: publish-helm depends on publish-docker

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -164,7 +164,7 @@ jobs:
 
   publish-helm:
     runs-on: ubuntu-latest
-    needs: [facts, build-helm-charts, build-helm-docs]
+    needs: [facts, build-helm-charts, build-helm-docs, publish-docker]
     permissions:
       id-token: write
       contents: write
