fix: modify the verbiage of the landing page

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,2 @@
 theme: jekyll-theme-minimal
-title: minio-operator-ext Helm Charts Repository
-description: The helm charts repository for the minio-operator-ext operator.
+title: minio-operator-ext
